# Turing-Machine-Emulator

./: CMakeLists.txt  TuringM.cpp  main.cpp
include/: App.h  Engine.h  Turing.h  TuringM.h  header.h
src/: App.cpp  Engine.cpp  Turing.cpp  TuringM.cpp
